fix: css align cards

--- a/css/global.css
+++ b/css/global.css
@@ -111,8 +111,8 @@ main {
 #cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: stretch;
   padding: 2rem;
   background: var(--gray-500);
 }
@@ -136,7 +136,7 @@ main {
   background-color: var(--gray-600);
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
-  margin: 0.5rem;
+  margin: 1rem;
   padding: 0.7rem;
   height: 18rem;
   width: 17rem;
